@@ -43,9 +43,9 @@
 #define LISTVIEW_SHADE_BOTTOM 0.96
 
 /* Toolbar */
-#define TOOLBAR_SHADE_TOP 1.05
+#define TOOLBAR_SHADE_TOP 1.04
 #define TOOLBAR_SHADE_CENTER_TOP 1.01
-#define TOOLBAR_SHADE_BOTTOM 0.96
+#define TOOLBAR_SHADE_BOTTOM 0.97
 
 
 static void
